--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.8.1",
     "joi": "^17.12.1",
     "mongoose": "^8.1.3",
