--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/mongoose": "^10.0.4",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -37,6 +38,8 @@
     "mongodb": "^6.4.0",
     "mongoose": "^8.1.3",
     "nestjs-pino": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pino-http": "^9.0.0",
     "pino-pretty": "^10.3.1",
     "reflect-metadata": "^0.2.0",
@@ -50,6 +53,7 @@
     "@types/jest": "^29.5.2",
     "@types/migrate-mongo": "^10.0.4",
     "@types/node": "^20.3.1",
+    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
